--- a/style.css
+++ b/style.css
@@ -1,273 +1,92 @@
-*:where(:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)) {
-    all: unset;
-    display: revert;
-}
-
-/* Preferred box-sizing value */
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
- 
-}
-
-/* Reapply the pointer cursor for anchor tags */
-a,
-button {
-    cursor: revert;
-}
-
-/* Remove list styles (bullets/numbers) */
-ol,
-ul,
-menu {
-    list-style: none;
-}
-
-/* For images to not be able to exceed their container */
-img {
-    max-width: 100%;
-}
-
-/* removes spacing between cells in tables */
-table {
-    border-collapse: collapse;
-}
-
-/* Safari - solving issue when using user-select:none on the <body> text input doesn't working */
-input,
-textarea {
-    -webkit-user-select: auto;
-}
-
-/* revert the 'white-space' property for textarea elements on Safari */
-textarea {
-    white-space: revert;
-}
-
-/* minimum style to allow to style meter element */
-meter {
-    -webkit-appearance: revert;
-    appearance: revert;
-}
-
-/* reset default text opacity of input placeholder */
-::placeholder {
-    color: unset;
-}
-
-/* fix the feature of 'hidden' attribute.
-   display:revert; revert to element instead of attribute */
-:where([hidden]) {
-    display: none;
-}
-
-/* revert for bug in Chromium browsers
-   - fix for the content editable attribute will work properly.
-   - webkit-user-select: auto; added for Safari in case of using user-select:none on wrapper element*/
-:where([contenteditable]:not([contenteditable="false"])) {
-    -moz-user-modify: read-write;
-    -webkit-user-modify: read-write;
-    overflow-wrap: break-word;
-    -webkit-line-break: after-white-space;
-    -webkit-user-select: auto;
-}
-
-/* apply back the draggable feature - exist only in Chromium and Safari */
-:where([draggable="true"]) {
-    -webkit-user-drag: element;
-}
-
 body {
-    min-width: 1111px;
-}
-
-h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 36px;
-    line-height: 42px;
-    letter-spacing: 5px;
-    text-transform: uppercase;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    color: #000000;
-    margin-bottom: 30px;
-    margin-top: 30px;
-
-}
-
-h2 {
-
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 36px;
-    line-height: 44px;
-    color: black;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    margin-top: 30px;
-
-}
-
-h3 {
-
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 24px;
-    line-height: 29px;
-    color: color=black;
-    margin-left: 650px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    margin-top: 30px;
-
-}
-
-.cuerpo {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 18px;
-    line-height: 22px;
-    color: #000000;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    margin-top: 130px;
-    padding: 30px;
-    text-align: justify;
-}
-
-.cabecerabloqueabajo {
-    height: 20px;
-    display: flex;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 17px;
-    line-height: 16px;
-    text-transform: uppercase;
-    color:#000000;
-    margin-bottom: 30px;
-    
-}
-
-.cabecerabloqueabajo h2{
-    font-family: "Lato";
-    font-size: 20px;
-    align-self: center;
-    margin-top: 30px;
-}
-
-.parrafobloque1 {
-    align-items: center;
-    font-size: 12px;
-}
-
-.imagen1 {
-    margin-left: 100px;
-    margin-right: 20px;;
-    margin-bottom: 20px;
-    width: 200px;
-    height: 30px;
-    top: 15px;
-    
-}
-
-.imagen2 {
-    margin-left: 20px;
-    margin-right: 20px;;
-    margin-bottom:100px;
-    width: 600px;
-    height: 300px;
-    top: 15px;
-    
-}
-
-header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    background-color: gray;
-    height: 160px;
-    width: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-    margin-bottom: 30px;
-
-}
-
-.parrafo {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 18px;
-    line-height: 22px;
-    color: #000000;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    margin-top: 30px;
-    text-align: justify;
-    padding: 20px;
-}
-
-.boton{
-    background-color: gray;
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 300;
-    font-size: 18px;
-    line-height: 22px;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-bottom: 30px;
-    margin-top: 40px;
-    display: inline-block;
-    cursor: pointer;
-    border-radius: 10px;
-    
-}
-
-nav {
-    font-family: 'Lato';
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 14px;
-
-
-    display: flex;
-    justify-content: center;
-    margin-left: auto;
-    margin-right: auto;
-    letter-spacing: 5.45455px;
-    text-transform: uppercase;
-    max-width: 750px;
-}
-
-nav a {
-    text-align: center;
-    align-self: center;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .container {
+    max-width: 1200px;
     margin: 0 auto;
-    padding: 40px;
-}
+    padding: 20px;
+  }
+  
 
-nav a:hover {
-    color: #44C0FE;
-}
-
+  
+  header {
+    background-color: #f2f2f2;
+    padding: 20px;
+  }
+  
+  .headercontainer {
+    display: flex;
+    align-items: center;
+  }
+  
+  .imagen1 img {
+    max-width: 100px;
+    height: auto;
+  }
+  
+  h3 {
+    margin-left: 20px;
+  }
+  
+  
+  .cuerpo {
+    background-color: #fff;
+    padding: 20px;
+  }
+  
+  h1 {
+    color: #333;
+    margin-bottom: 20px;
+  }
+  
+  .parrafo {
+    color: #666;
+    line-height: 1.5;
+  }
+  
+  .imagen2 img {
+    max-width: 200px;
+    height: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  
+  .bloqueabajo {
+    margin-top: 40px;
+    padding: 20px;
+    background-color: #f2f2f2;
+  }
+  
+  .cabecerabloqueabajo {
+    margin-bottom: 20px;
+  }
+  
+  h2 {
+    color: #333;
+  }
+  
+  .parrafobloque1 {
+    color: #666;
+  }
+  
+  /* Estilos del pie de página */
+  
+  .footer {
+    background-color: #333;
+    padding: 20px;
+    color: #fff;
+    text-align: center;
+  }
+  
+  nav {
+    margin-top: 20px;
+  }
+  
+  nav a {
+    color: #fff;
+    text-decoration: none;
+    margin-right: 10px;
+  }
